fix(frontend): 🐛 hide decimal input rounding buttons on mobile

--- a/packages/dev-frontend/src/components/DecimalInput.module.css
+++ b/packages/dev-frontend/src/components/DecimalInput.module.css
@@ -100,3 +100,12 @@
   composes: button stepButton;
   grid-area: plus;
 }
+
+@media screen and (max-width: 1023px) {
+    .set25,
+    .set50,
+    .set75,
+    .setMax {
+        display: none;
+    }
+}
